Fixed text overflow in slideshow (max 4 wrapped title lines on mobile)

--- a/docroot/sites/all/themes/chm_theme_kit/css/style.css
+++ b/docroot/sites/all/themes/chm_theme_kit/css/style.css
@@ -11218,7 +11218,7 @@ body.logged-in #block-chm-search-chm-search:hover input[type="text"] {
 @media all and (max-width: 767px) {
   .view-home-page-image-slider .slick-content.well h2 > a {
     margin: 0;
-    font-size: 26px;
+    font-size: 25px;
   }
   .view-home-page-image-slider .slick-content.well a.more-link {
     margin: 0;
@@ -11232,23 +11232,19 @@ body.logged-in #block-chm-search-chm-search:hover input[type="text"] {
 @media all and (max-width: 550px) {
   .view-home-page-image-slider .slick-content.well h2 {
     margin-bottom: 0;
+    line-height: 1.1;
   }
   .view-home-page-image-slider .slick-content.well h2 > a {
     margin: 0;
     font-size: 18px;
-    font-size: 6vw;
+    font-size: 5vw;
+    line-height: 1.1;
   }
   .view-home-page-image-slider .slick-content.well a.more-link {
     display: none;
   }
   .view-home-page-image-slider .slick-content.well .form-item.form-type-item.form-group {
     font-size: 10px;
-  }
-}
-@media all and (max-width: 457px) {
-  .view-home-page-image-slider .slick-content.well h2 > a {
-    font-size: 16px;
-    font-size: 5vw;
   }
 }
 .view-home-page-image-slider .slick-content.well:hover {
