--- a/docroot/sites/all/themes/chm_theme_kit/less/slideshow.less
+++ b/docroot/sites/all/themes/chm_theme_kit/less/slideshow.less
@@ -115,8 +115,7 @@
     @media all and (max-width: 767px) {
       h2 > a {
         margin: 0;
-        font-size: 26px;
-        
+        font-size: 25px;
       }
       a.more-link {
         margin: 0;
@@ -130,23 +129,19 @@
     @media all and (max-width: 550px) {
       h2 {
         margin-bottom: 0;
+        line-height: 1.1;
       }
       h2 > a {
         margin: 0;
         font-size: 18px;
-        font-size: 6vw;
+        font-size: 5vw;
+        line-height: 1.1;
       }
       a.more-link {
         display: none;      
       }
       .form-item.form-type-item.form-group {
         font-size: 10px;
-      }
-    }
-    @media all and (max-width: 457px) {
-      h2 > a {
-        font-size: 16px;
-        font-size: 5vw;
       }
     }
   }
